Выполнение ДЗ: Параллельный запуск тестов и Jenkins
Задача 1. Cypress Dashboard:
- Добавлен projectId в cypress.config.js
- Добавлены скрипты cy:run:dashboard и cy:run:parallel для записи в Dashboard
- Создан GitHub Actions workflow (.github/workflows/cypress.yml) для параллельного запуска

Задача 2. Jenkins:
- Скрипты для 3 браузеров: jenkins:chrome, jenkins:firefox, jenkins:edge
- Скрипт для параллельного запуска в 2 браузерах: jenkins:parallel:browsers
- Созданы папки booking-tests и admin-tests
- Распределены тесты по папкам (сохранены оригиналы)
- Добавлены новые тесты: payment.cy.js (папка booking-tests) и schedule.cy.js (папка admin-tests)
- Скрипт для параллельного запуска папок: jenkins:parallel:folders
- Создан Jenkinsfile с параметрами:
  • BROWSER - выбор браузера
  • PARALLEL_BROWSERS - параллельный запуск в 2 браузерах
  • PARALLEL_FOLDERS - параллельный запуск из 2 папок
- Все параметры протестированы и работают
- Оригинальные тесты сохранены (01-main-page.cy.js, 02-admin-login.cy.js, 03-booking.cy.js)

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "name": "cypress-cinema-tests",
   "version": "1.0.0",
   "description": "Тесты для приложения бронирования билетов в кино",
@@ -6,12 +6,22 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "test": "cypress run"
+    "test": "cypress run",
+    "cy:run:dashboard": "cypress run --record --key ваш-ключ",
+    "cy:run:parallel": "cypress run --parallel --record --key ваш-ключ",
+    "jenkins:chrome": "cypress run --browser chrome",
+    "jenkins:firefox": "cypress run --browser firefox",
+    "jenkins:edge": "cypress run --browser edge",
+    "jenkins:parallel:browsers": "npx concurrently \"npm run jenkins:chrome\" \"npm run jenkins:firefox\"",
+    "jenkins:booking-tests": "cypress run --spec \"cypress/e2e/booking-tests/**/*.cy.js\"",
+    "jenkins:admin-tests": "cypress run --spec \"cypress/e2e/admin-tests/**/*.cy.js\"",
+    "jenkins:parallel:folders": "npx concurrently \"npm run jenkins:booking-tests\" \"npm run jenkins:admin-tests\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "cypress": "^13.6.0"
   }
 }
